Task/82 remove deprecations (#83)
* chore: removed deprecations (#75)

* bug: versioned import in unversioned interface (#76)

* bug: versioned import in unversioned interface (#76)

* bug: versioned import in unversioned interface (#76)

* chore: cleanup (#75)

* chore: removed sendOrder methods (#75)

* chore: removed deprecated methods renamed by lombok (#75)

* chore: removed endCrossDocking[OrderResponse|Dispatch|Return] (#82)

* chore: unify Getter/Setter approach (#12)

* chore: removed deprecated methods (#82)

* chore: removed deprecated methods (#82)